// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerInputStruct should be invalid for bad group 1`] = `
Object {
  "regions": Array [
    undefined,
    Object {
      "id": "yup:string.uuid",
    },
  ],
}
`;

exports[`BannerInputStruct should be invalid for bad link 1`] = `
Object {
  "link": Object {
    "key": "yup:string.url",
    "options": Object {
      "path": "link",
    },
  },
}
`;

exports[`BannerInputStruct should be invalid for bad placement 1`] = `
Object {
  "placement": Object {
    "key": "yup:mixed.oneOf",
    "options": Object {
      "values": "mobileSectionDescription, mobileSectionRow, mobileSectionMedia, mobileRegionDescription",
    },
  },
}
`;

exports[`BannerInputStruct should be invalid for bad region 1`] = `
Object {
  "regions": Array [
    undefined,
    Object {
      "id": "yup:string.uuid",
    },
  ],
}
`;

exports[`BannerInputStruct should be invalid for bad slug 1 1`] = `
Object {
  "slug": "yup:string.slug",
}
`;

exports[`BannerInputStruct should be invalid for bad slug 2 1`] = `
Object {
  "slug": "yup:string.slug",
}
`;

exports[`BannerInputStruct should be invalid for bad uuid 1`] = `
Object {
  "id": "yup:string.uuid",
}
`;

exports[`BannerInputStruct should be invalid for casting priority 1`] = `
Object {
  "priority": Object {
    "key": "yup:mixed.notType",
    "options": Object {
      "type": "number",
    },
  },
}
`;

exports[`BannerInputStruct should be invalid for empty name 1`] = `
Object {
  "name": "yup:string.nonEmpty",
}
`;

exports[`BannerInputStruct should be invalid for empty source 1`] = `
Object {
  "source": Object {
    "url": "yup:string.nonEmpty",
  },
}
`;

exports[`BannerInputStruct should be invalid for extra fields 1`] = `
Object {
  "": Object {
    "key": "yup:object.noUnknown",
    "options": Object {
      "path": "this",
    },
  },
}
`;

exports[`BannerInputStruct should be invalid for http link 1`] = `
Object {
  "link": "yup:string.https",
}
`;

exports[`BannerInputStruct should be invalid for missing uuid 1`] = `
Object {
  "id": "yup:mixed.defined",
}
`;

exports[`BannerInputStruct should be invalid for source with extra fields 1`] = `
Object {
  "source": Object {
    "key": "yup:object.noUnknown",
    "options": Object {
      "path": "source",
    },
  },
}
`;

exports[`BannerInputStruct should be invalid for undefined uuid 1`] = `
Object {
  "id": "yup:mixed.defined",
}
`;
